# timsrust

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: rust.yml
benches/: speed_performance.rs
src/: acquisition.rs  calibration.rs  converters.rs  data.rs  domain_converters.rs  errors.rs  file_readers.rs  file_writers.rs  frames.rs  io.rs  lib.rs  main.rs  ms_data.rs  precursors.rs  spectra.rs  utils.rs  vec_utils.rs
src/converters/: scan_to_im.rs
src/data/: frames.rs  spectra.rs
src/domain_converters/: frame_to_rt.rs  scan_to_im.rs  tof_to_mz.rs
src/file_readers/: common.rs  dda_reader.rs  file_formats.rs  frame_readers.rs  mini_tdf_reader.rs  spectrum_readers.rs
src/file_readers/common/: ms_data_blobs.rs  parquet_reader.rs  sql_reader.rs
src/file_readers/common/ms_data_blobs/: parsers.rs  processors.rs  readers.rs
src/file_readers/common/sql_reader/: metadata.rs  tables.rs
src/file_readers/common/sql_reader/tables/: dia_frames_info.rs  dia_frames_msms.rs  frames.rs  pasef_frame_msms.rs  precursors.rs
src/file_readers/frame_readers/: tdf_reader.rs
src/file_readers/spectrum_readers/: dda_reader.rs  mini_tdf_reader.rs
src/file_readers/spectrum_readers/dda_reader/: precursors.rs
src/file_writers/: mgf_writer.rs
src/io/: readers.rs  writers.rs
src/io/readers/: common.rs  file_readers.rs  frame_reader.rs  metadata_reader.rs  precursor_reader.rs  quad_settings_reader.rs  spectrum_reader.rs  tdf_utils.rs  timstof.rs
src/io/readers/common/: sql_frames.rs  sql_reader.rs  tdf_blobs.rs
src/io/readers/file_readers/: parquet_reader.rs  sql_frames.rs  sql_reader.rs  tdf_blob_reader.rs
src/io/readers/file_readers/parquet_reader/: precursors.rs
src/io/readers/file_readers/sql_reader/: frame_groups.rs  frames.rs  metadata.rs  pasef_frame_msms.rs  precursors.rs  quad_settings.rs
src/io/readers/file_readers/tdf_blob_reader/: tdf_blobs.rs
src/io/readers/precursor_reader/: minitdf.rs  tdf.rs
src/io/readers/precursor_reader/tdf/: dda.rs  dia.rs
src/io/readers/spectrum_reader/: builder.rs  config.rs  errors.rs  minitdf.rs  spectrum_trait.rs  tdf.rs
src/io/readers/spectrum_reader/tdf/: dda.rs  dia.rs  raw_spectra.rs
src/io/writers/: mgf.rs
src/ms_data/: acquisition.rs  frames.rs  metadata.rs  precursors.rs  quadrupole.rs  spectra.rs
src/utils/: vec_utils.rs
tests/: frame_readers.rs  simulation_requirements.txt  spectrum_readers.rs  tdf_simulator.ipynb  tdf_simulator_dia.ipynb  test.mgf  test2.mgf
tests/dia_test.d/: analysis.tdf  analysis.tdf_bin
tests/test.d/: analysis.tdf  analysis.tdf_bin
tests/test.ms2/: converter.GlobalMetaData.ms2.parquet  converter.ms2spectrum.parquet
tests/test2.ms2/: converter.MS2Spectra.ms2.parquet
