[package]
name = "timsrust"
version = "0.2.2"
edition = "2021"
description = "A crate to read Bruker timsTOF data"
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/timsrust"
repository = "https://github.com/mannlabs/timsrust"
homepage = "https://github.com/mannlabs/timsrust"
categories = ["accessibility", "data-structures", "parsing", "science"]
keywords = ["MS", "LC-TIMS-TOF", "PASEF"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
zstd = "0.12.3"
rusqlite = { version = "0.29.0", features = ["bundled"] }
rayon = "1.5"
linreg = "0.2.0"
bytemuck = "1.13.1"
parquet = "42.0.0"
thiserror = "1.0.0"
