[package]
name = "timsrust"
version = "0.4.0"
edition = "2021"
description = "A crate to read Bruker timsTOF data"
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/timsrust"
repository = "https://github.com/mannlabs/timsrust"
homepage = "https://github.com/mannlabs/timsrust"
categories = ["accessibility", "data-structures", "parsing", "science"]
keywords = ["MS", "LC-TIMS-TOF", "PASEF"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zstd = "0.13.2"
rusqlite = { version = "0.31.0", features = ["bundled"] }
rayon = "1.10.0"
linreg = "0.2.0"
bytemuck = "1.13.1"
parquet = "42.0.0"
thiserror = "1.0.0"
memmap2 = "0.9.3"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "speed_performance"
harness = false
