[package]
name = "timsrust"
version = "0.4.2"
edition = "2021"
description = "A crate to read Bruker timsTOF data"
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/timsrust"
repository = "https://github.com/mannlabs/timsrust"
homepage = "https://github.com/mannlabs/timsrust"
categories = ["accessibility", "data-structures", "parsing", "science"]
keywords = ["MS", "LC-TIMS-TOF", "PASEF"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zstd = "0.13.2"
rayon = "1.10.0"
linreg = "0.2.0"
bytemuck = "1.18.0"
thiserror = "1.0.0"
memmap2 = "0.9.3"
rusqlite = { version = "0.32.0", features = ["bundled"], optional = true }
parquet = { version = "53.0.0", optional = true }
serde = { version = "1.0.210", features = ["derive"], optional = true }
serde_json = { version = "1.0.128", optional = true }
timscompress = {version = "0.1.0", optional=true}

[features]
tdf = ["rusqlite"]
minitdf = ["parquet"]
default = ["tdf", "minitdf", "serialize"]
serialize = ["serde", "serde_json"]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "speed_performance"
harness = false
